--- a/Guia12.1/Ejercicio1/Ejercicio1.csproj
+++ b/Guia12.1/Ejercicio1/Ejercicio1.csproj
@@ -52,10 +52,37 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormInscripcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormInscripcion.Designer.cs">
+      <DependentUpon>FormInscripcion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormResultado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormResultado.Designer.cs">
+      <DependentUpon>FormResultado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTiempo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTiempo.Designer.cs">
+      <DependentUpon>FormTiempo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormInscripcion.resx">
+      <DependentUpon>FormInscripcion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormResultado.resx">
+      <DependentUpon>FormResultado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTiempo.resx">
+      <DependentUpon>FormTiempo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -79,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
