--- a/Guia12.1/Ejercicio1/Ejercicio1.csproj
+++ b/Guia12.1/Ejercicio1/Ejercicio1.csproj
@@ -70,6 +70,7 @@
     <Compile Include="FormTiempo.Designer.cs">
       <DependentUpon>FormTiempo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Competencia.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -107,8 +108,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
